--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "body-parser": "^1.19.0",
+    "colorthief": "^2.3.2",
     "core-js": "^3.19.3",
-    "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify": "^2.6.1",
-    "webpack": "^4.46.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^16.0.1",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
-    "body-parser": "^1.19.0",
-    "colorthief": "^2.3.2",
-    "express": "^4.17.1",
-    "express-graphql": "^0.12.0"
+    "nuxt": "^2.15.8",
+    "nuxt-socket-io": "^3.0.8",
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify": "^2.6.1",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
