--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "colorthief": "^2.3.2",
     "core-js": "^3.19.3",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "graphql": "^16.0.1",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "npm": "^9.1.3",
     "nuxt": "^2.15.8",
     "nuxt-socket-io": "^3.0.8",
     "vue": "^2.6.14",
